# gale

./: .gitignore  CONTRIBUTING.md  COPYING  Cargo.toml  Makefile  NOTES.md  README.md  STYLE_GUIDE.universal.md  STYLE_GUIDE.zig.md  WORDS.md  build.zig  init.gale  init.glm  scratch.glm
.github/: FUNDING.yml
LICENSES/: GUTHRIE.txt
bootstrap/: Cargo.toml
bootstrap/src/: lexer.rs  main.rs  test_comment.rs  test_hashbang.rs  test_literal.rs  test_shape.rs
docs/: philosophy_and_other_musings.scd
examples/: branching_overloading.gale  hello_world.glm  options_results.glm  sameness_checker.gale  simple_shapes.gale  simple_shapes.glm  traits.glm
examples/hello_world/: gluumy.conf  hello_world.glm
examples/md5/: gluumy.conf  md5.glm
examples/options_results/: gluumy.conf  options_results.glm
lib/: primitives.glm
lib/core/: boolean.glm  cmp.glm  error.glm  gluumy-module.conf  init.glm  math.glm  number.glm  option.glm  primitive.glm  result.glm  shapes.glm  string.glm
lib/gale/: gale.zig  helpers.zig  internal_error.zig  nucleus_words.zig  object.zig  rc.zig  (+13 more)
sketches/: bounded_parameters.gale  sameness_checker.gale  simple_shapes.gale  union_types_instead_of_enums.gale
src/: gluumy-bootstrap.lua  gluumy-bootstrap.test.lua  helpers.zig  internal_error.rs  internal_error.zig  main.lib.zig  main.rs  main.zig  nucleus_words.zig  object.rs  object.zig  parsed_word.zig  rc.zig  runtime.rs  runtime.zig  runtime_error.rs  stack.zig  store.rs  type_system.rs  types.zig  vocabulary.rs  word.rs  word.zig  word_list.zig  word_map.zig
tests/: test_protolang.zig
(+27 files in other folders)
