[package]
name = "gluumyc-bootstrap"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
# full_moon takes a syn dependency anyway, so while I'd probably otherwise
# reach for arguably, we'll snag the extra creature comforts of argh here,
# it doesn't take _that_ much longer to build
argh = "0.1"

full_moon = "0.15"
nanoserde = "0.1"
unicode-segmentation = "1.9"
